fix: Spacing between community title and followers list on community list
After restoring the "Poppins" font, the title and the follower count were too close together. This changes the font size of the title and the top margin of the follower count slightly.

--- a/apps/juxtaposition-ui/webfiles/web/css/web.css
+++ b/apps/juxtaposition-ui/webfiles/web/css/web.css
@@ -390,11 +390,11 @@ iframe {
 
 .community-list-title {
   margin: 0.5em 0-1em;
-  font-size: 2ch;
+  font-size: 18px;
 }
 
 .community-list-followers {
-  margin: 0.5em 0 0;
+  margin: 1em 0 0;
   font-size: 1.5ch;
 }
 
